--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>kafka-clients</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 </project>
